# svgplot

./: .gitignore  AGENTS.md  BarChart.md  CMakeLists.txt  LEGEND.md  LICENSE  README.md  SVG_CLEANUP_TODO.md  package-lock.json  package.json  playwright.config.js  single_header.json
.github/workflows/: ci.yml  release.yml
cmake/: FetchModules.cmake
examples/: exercise_log.cpp  multi_series_line.cpp  stacked_bar.cpp  training_heatmap.cpp
include/svgplot/: bar_chart.hpp  chart.hpp  date.hpp  heatmap.hpp  heatmap_chart.hpp  line_chart.hpp  palette.hpp  scale.hpp  svgplot.hpp  types.hpp
include/svgplot/bar_chart/: bar_chart.hpp  bounds.hpp  styles.hpp  types.hpp
include/svgplot/core/: bounds.hpp  colors.hpp  css_vars.hpp  format.hpp  layout.hpp  palette.hpp  rendering.hpp  styles.hpp  svg_backend.hpp
include/svgplot/detail/: bounds.hpp  colors.hpp  format.hpp  layout.hpp  legend.hpp  styles.hpp
include/svgplot/heatmap/: css_vars.hpp  heatmap.hpp  heatmap_chart.hpp  layout.hpp  rendering.hpp  styles.hpp  types.hpp
include/svgplot/legend/: legend.hpp  types.hpp
include/svgplot/line_chart/: bounds.hpp  line_chart.hpp  styles.hpp  types.hpp
tests/: AGENTS.md  chart_tests.cpp
tests/single_header_smoke/: CMakeLists.txt  smoke_one.cpp  smoke_two.cpp
tests/visual/: svg-fixtures.spec.js
